force-app/main/default/objects/Meter_Reading__c/Meter_Reading__c.object-meta.xml
<CustomObject>
  <description>
    Periodic consumption reading (kWh). Full history lives in Data 360; SF holds
    recent copies.
  </description>
  <label>Meter Reading</label>
  <pluralLabel>Meter Readings</pluralLabel>
  <nameField>
    <displayFormat>MR-{00000000}</displayFormat>
    <label>Reading Number</label>
    <type>AutoNumber</type>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>