force-app/main/default/objects/Meter_Reading__c/fields/Is_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Is_Estimated__c</fullName>
    <label>Is Estimated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>