force-app/main/default/objects/Meter_Reading__c/fields/kWh__c.field-meta.xml
<CustomField>
    <fullName>kWh__c</fullName>
    <label>kWh</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>