force-app/main/default/objects/Meter_Reading__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <label>Meter</label>
    <type>Lookup</type>
    <referenceTo>Meter__c</referenceTo>
    <relationshipLabel>Readings</relationshipLabel>
    <relationshipName>Readings</relationshipName>
</CustomField>