force-app/main/default/objects/Meter_Reading__c/fields/Source__c.field-meta.xml
<CustomField>
  <fullName>Source__c</fullName>
  <label>Source</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Smart</fullName>
        <default>true</default>
        <label>Smart</label>
      </value>
      <value>
        <fullName>Manual</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>