force-app/main/default/objects/Meter_Reading__c/listViews/All_Meter_Readings.listView-meta.xml
<ListView>
  <fullName>All_Meter_Readings</fullName>
  <columns>NAME</columns>
  <columns>Meter__c</columns>
  <columns>Read_Date__c</columns>
  <columns>kWh__c</columns>
  <columns>Source__c</columns>
  <filterScope>Everything</filterScope>
  <label>All Meter Readings</label>
</ListView>